# llama.cpp

./: CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  Package.swift  README.md  SECURITY.md  convert_hf_to_gguf.md  flake.nix  mypy.ini  pyproject.toml  pyrightconfig.json  requirements.txt
ci/: README.md
common/: CMakeLists.txt
docs/: android.md  build.md  docker.md  install.md
docs/development/: HOWTO-add-model.md
examples/: CMakeLists.txt
examples/main/: CMakeLists.txt  README.md  main.cpp
examples/server/: CMakeLists.txt  README.md  deps.sh
examples/server/themes/: README.md
ggml/: CMakeLists.txt
gguf-py/: README.md
grammars/: README.md
pocs/: CMakeLists.txt
pocs/vdot/: CMakeLists.txt
scripts/: build-info.sh
src/: CMakeLists.txt
